# fastapi-basic

./: README.md  pyproject.toml
app/: main.py
